@@ -1,3 +1,11 @@
+Wed Feb  6 01:26:57 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * tests/cuts/Port_Measurement_Test.cpp:
+        * tests/cuts/Time_Measurement_Test.cpp:
+        * tests/cuts/Timestamp_Metric_Test.cpp:
+
+          Fixed build errors.
+
 Wed Feb  6 00:53:24 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/paradigms/PICML/be/BE_CoWorkEr_Generator.cpp:
